fixed bug where EV's not divisible by 4 were allowed

--- a/EVCalcApp/static/EVCalc_app/styles/styles.css
+++ b/EVCalcApp/static/EVCalc_app/styles/styles.css
@@ -16,7 +16,7 @@ body{
 .header{
     background-color: #141414;
     height: 3em;
-    border-bottom: groove thin white;
+    border-bottom: groove thin;
     font-size: 1.25em;
     padding-top: .85em;
 }
